--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,7 +9,7 @@ header {
   color: #fff;
   font-size: 25px;
   text-align: center;
-  background-color: #fa5b4d;
+  background-color: #fa5b4a;
 }
 
 .container {
