--- a/views/blog/test.jade
+++ b/views/blog/test.jade
@@ -1,5 +1,6 @@
-extend layout
+extend ../layout
 block content
+	h1 Test Page
 	p
 		| Vivamus hendrerit arcu sed erat molestie
 		| vehicula. Sed auctor neque eu tellus
@@ -14,9 +15,9 @@ block content
 block sidebar
 	.widget
 		h1 Widget
-		p
-			| Sed auctor neque eu tellus rhoncus ut
-			| eleifend nibh porttitor. Ut in nulla enim.
-		p
-			| Vivamus hendrerit arcu sed erat molestie
-			| vehicula.
+	p
+		| Sed auctor neque eu tellus rhoncus ut
+		| eleifend nibh porttitor. Ut in nulla enim.
+	p
+		| Vivamus hendrerit arcu sed erat molestie
+		| vehicula.
