--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype
 html
 	head
-		title #{title} - My Site
+		title #{title} - 500 Miles For Parkisons
 		link(rel='stylesheet', href='/styles/main.css')
 	body
 		header
