Formatted file directory and added base files

--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -6,6 +6,13 @@ html
 	body
 		header
 			h1 My Site
+		nav
+			ul
+				li: a(href='home') Home
+				li: a(href='lessons') Lessons
+				li: a(href='resources') Resources
+				li: a(href='fundraising') Fundraising
+				li: a(href='contact') Contact
 		.container
 			.main-content
 				block content
