--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,44 @@
+html {
+  font-family: 'PT Sans', sans-serif;
+}
+
+nav {
+  text-align: center;
+  background-color: #191E28;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0 auto;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav ul li a {
+  display: inline-block;
+  text-decoration: none;
+  padding: 16px 20px 20px 20px;
+  color: #aaa;
+  font-size: 18px;
+  border-top: 4px #191E28 solid;
+  transition: 0.5s all;
+}
+
+nav ul li a.active {
+  border-top: 4px #fff solid;
+  padding-top: 16px;
+  color: #fff;
+}
+
+nav ul li a:hover {
+  border-top: 4px #ccc solid;
+  padding-top: 16px;
+  color: #ccc;
+}
+
 body {
   font-family: 'Georgia';
   background-color: #faf9f0;
