--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -1,18 +1,20 @@
 doctype
 html
+	block vars
 	head
 		title #{title} - 500 Miles For Parkisons
 		link(rel='stylesheet', href='/styles/main.css')
+		line(rel='stylesheet', href='https://fonts.googleapis.com/css?family=PT+Sans', type='text/css')
 	body
 		header
-			h1 My Site
+			h1 500 Miles For Parkisons
 		nav
 			ul
-				li: a(href='home') Home
-				li: a(href='lessons') Lessons
-				li: a(href='resources') Resources
-				li: a(href='fundraising') Fundraising
-				li: a(href='contact') Contact
+				li: a(href='/', class = activePage == 'home' ? 'active' : '') Home
+				li: a(href='/lessons', class = activePage == 'lessons' ? 'active' : '') Lessons
+				li: a(href='/resources', class = activePage == 'resources' ? 'active' : '') Resources
+				li: a(href='/fundraising', class = activePage == 'fundraising' ? 'active' : '') Fundraising
+				li: a(href='/contact', class = activePage == 'contact' ? 'active' : '') Contact
 		.container
 			.main-content
 				block content
