--- a/views/pages/follow.jade
+++ b/views/pages/follow.jade
@@ -1,11 +1,11 @@
 extend ../templates/layout
 
 block vars
-	- var activePage = 'resources';
+	- var activePage = 'follow';
 	
 block content
-	h1 #{title}
-	p Under development
+	p Follow Harry, Sue, and Ross on their journey!
+	iframe(style="width: 100%; height: 500px" src="http://share.findmespot.com/shared/faces/viewspots.jsp?glId=08E77dFJpiYJYvxVC5ED26Mk1STAmilfa")
 
 block sidebar
 	.widget
