--- a/views/pages/fundraising.jade
+++ b/views/pages/fundraising.jade
@@ -5,17 +5,28 @@ block vars
 
 block content
 	h1 #{title}
-	p
-		| Vivamus hendrerit arcu sed erat molestie
-		| vehicula. Sed auctor neque eu tellus
-		| rhoncus ut eleifend nibh porttitor. Ut in.
-	p
-		| Donec congue lacinia dui, a porttitor
-		| lectus condimentum laoreet. Nunc eu
-		| ullamcorper orci. Quisque eget odio ac
-		| lectus vestibulum faucibus eget in metus.
-		| In pellentesque faucibus vestibulum. Nulla
-		| at nulla justo, eget luctus tortor.
+	p Schools may buy a mile through student fundraising activities. We believe that one is never too young to learn the value of charitable giving. Furthermore, 100% of the money raised by schools will be donated to The Michael J. Fox Foundation for Parkinson's Research.
+	
+	h4 "Buy a Mile" Fundraising Objectives:
+
+	ul
+		li Students learn about Parkison's Disease
+		li Fundraise for a great cause
+		li Students get involved in their community
+		li Increase fitness, awareness, and involvement
+	
+	h4 How To Get Involved
+	
+	ul
+		li Organize A walk at your school -- as part of class/gym, as a group or individuals or as an extra-curricular event!
+		li Collect money as a class, then as a school to submit your efforts to #[a(href="www.fivehundredmiles.org") Five Hundred Miles]
+		li Put signs pinned to students' shirts; "I walk for Parkinson's because..." then let the students fill in an answer with markers.
+	
+	h4 Materials Needed
+	
+	ul
+		li Running Shoes
+		li Positive Attitude		
 
 block sidebar
 	.widget
