--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -16,6 +16,63 @@ nav {
 		li {
 			display: inline-block;
 			a {
+				
+				
+				
+			}
+		}
+	}
+}
+
+div.contact-form {
+	width: 100%;
+	form {
+		margin: 0 auto;
+		width: 250px;
+		text-align: center;
+		input {
+			width: 100%;
+			padding: 7px;
+			display: block;
+			margin: 10px 0px;
+			border-radius: 3px;
+			font-size: 16px;
+		}
+		textarea {
+			display: block;
+			border-radius: 3px;
+    		resize: none;
+			width: 100%;
+			padding: 7px;
+			font-family: sans-serif;
+			font-size: 16px;
+		}
+		button {
+			display: inline;
+			width: auto;
+			font-family: sans-serif;
+			font-size: 14px;
+			margin: 10px;
+		}
+	}
+}
+
+#error {
+	height: 10px;
+	color: red;
+}
+
+nav {
+	text-align: center;
+	background-color: #191E28;
+	ul {
+		list-style-type: none;
+		margin: 0 auto;
+		padding: 0;
+		
+		li {
+			display: inline-block;
+			a {
 				display: inline-block;
 				text-decoration: none;
 				padding: 16px 20px 20px 20px;
@@ -30,10 +87,43 @@ nav {
 					color: #fff;
 				}
 				
-				&:hover {
-					border-top: 4px #ccc solid;
-					padding-top: 16px;
-					color: #ccc;
+				
+			}
+			&:hover a {
+				border-top: 4px #ccc solid;
+				padding-top: 16px;
+				color: #ccc;
+			}
+			
+			&:hover ul {
+				opacity: 1;
+				visibility: visible;
+				z-index: 1;
+			}
+			
+			ul {
+				position: absolute;
+				opacity: 0;
+				z-index: 0;
+				visibility: hidden;
+				width: 100px;	
+				transition: 0.25s all, z-index 1ms;
+				
+				li {
+					display: block;
+					width: 100%;
+					a {
+						width: 100%;
+						background-color: #464a52;
+						border-top: none !important;
+						border-bottom: 1px solid white;
+						text-align: left;
+						padding: 16px 20px 20px 20px;
+						&:hover {
+							border-top: none;
+							color: white;
+						}
+					}
 				}
 			}
 		}
@@ -55,14 +145,14 @@ header {
 }
 
 .container {
-	width: 500px;
+	width: 800px;
 	margin: 50px auto;
 	overflow: hidden;
 }
 
 .main-content {
 	float: left;
-	width: 300px;
+	width: 500px;
 	
 	p {
 		margin-bottom: 20px;
@@ -71,7 +161,7 @@ header {
 
 .sidebar {
 	float: left;
-	width: 200px;
+	width: 300px;
 	
 	.widget {
 		border-radius: 3px;
