--- a/views/pages/home.jade
+++ b/views/pages/home.jade
@@ -1,37 +1,32 @@
 extend ../templates/layout
 
 block vars
-    - var activePage = 'home';
+	- var activePage = 'home';
 
 block content
-    h1 #{title}
+	h4 500 Minutes For Parkinson's (An Educational Resource to Support the 500 Miles for Parkinson's Project)
 
-        h4 500 Minutes For Parkinson’s (An Educational Resource to Support the 500 Miles for Parkinson’s Project)
+	p In the spring of 2016, Harry McMurtry will walk from New York City to his hometown, Toronto, to raise money for Parkinson's research and awareness of this disease. He will be accompanied on the walk by Sue Thompson of Toronto and Dr. Ross Sugar of Baltimore, MD. As Harry, Sue and Ross all have Parkinson's disease, walking up to 15 miles a day for 45 days is a tremendous challenge and one that makes this event a much bigger story about the disease itself.
 
-        p  In the spring of 2016, Harry McMurtry will walk from New York City to his hometown, Toronto, to raise money for Parkinson’s research and awareness of this disease. He will be accompanied on the walk by Sue Thompson of Toronto and Dr. Ross Sugar of Baltimore, MD. As Harry, Sue and Ross all have Parkinson’s disease, walking up to 15 miles a day for 45 days is a tremendous challenge and one that makes this event a much bigger story about the disease itself.
+	h4 School Program
 
-        h4 School Program
+	p One of the goals of 500 Miles for Parkinson's is to raise awareness of Parkinson's disease. To help achieve this goal, we want to engage school-aged children and, thus, their schools in the project. This engagement may be accomplished in a number of  ways:
 
-        p  One of the goals of 500 Miles for Parkinson’s is to raise awareness of Parkinson’s disease. To help achieve this goal, we want to engage school-aged children and, thus, their schools in the project. This engagement may be accomplished in a number of  ways:
+	ol
+		li Schools may invite Harry, Sue and Ross to address the school about Parkinson's disease generally or 500 Miles specifically.
+		li Schools may buy a mile through student fundraising activities.
+		li Schools and individual classes may explore the 500 Minutes for Parkinsons Challenge (see below)
 
-        p  1: Schools may invite Harry, Sue and Ross to address the school about Parkinson’s disease generally or 500 Miles specifically.
+	h4 Introducing the 500 Minutes For Parkinson's Challenge
 
-        p  2: Schools may buy a mile through student fundraising activities.
-
-        p  3: Schools and individual classes may explore the 500    Minutes for Parkinson’s Challenge (see below)
-
-        h4 Introducing the 500 Minutes For Parkinson’s Challenge
-
-        p  This is a challenge for educators and schools to provide students with up to 500 Minutes of Education and Awaness about Parkinson’s during the Walk. This is equivalent to approximately 10-15 minutes per day. Sue Thompson has used her experience as an educator to develop a variety of lesson plans and resources to make this challenge easy. Teachers can used lesson plans provided and adapt them as necessary to fit the needs of their classes and facilities.  The lesson plans are targeted for grades 4-8 (but can be adapted to fit any age group) and include topics like the brain, Parkinson’s disease, mindfulness and yoga, balance and agility exercise, brain games, fundraising ideas and the list goes on. They are instructional, fun and easy – help spread awareness about Parkinson’s and get involved!!
-
-
+	p This is a challenge for educators and schools to provide students with up to 500 Minutes of Education and Awaness about Parkinson's during the Walk. This is equivalent to approximately 10-15 minutes per day. Sue Thompson has used her experience as an educator to develop a variety of lesson plans and resources to make this challenge easy. Teachers can used lesson plans provided and adapt them as necessary to fit the needs of their classes and facilities.  The lesson plans are targeted for grades 4-8 (but can be adapted to fit any age group) and include topics like the brain, Parkinson's disease, mindfulness and yoga, balance and agility exercise, brain games, fundraising ideas and the list goes on. They are instructional, fun and easy – help spread awareness about Parkinson's and get involved!!
 
 block sidebar
-    .widget
-        h1 Widget
-        p
-            | Sed auctor neque eu tellus rhoncus ut
-            | eleifend nibh porttitor. Ut in nulla enim.
-        p
-            | Vivamus hendrerit arcu sed erat molestie
-            | vehicula.
+	.widget
+		h1 Widget
+			p
+				| Sed auctor neque eu tellus rhoncus ut
+				| eleifend nibh porttitor. Ut in nulla enim.
+			p
+				| Vivamus hendrerit arcu sed erat molestie
+				| vehicula.
