--- a/views/pages/lessons.jade
+++ b/views/pages/lessons.jade
@@ -1,25 +1,28 @@
 extend ../templates/layout
 
 block vars
-	- var activePage = 'home';
+	- var activePage = 'lessons';
 
 block content
-	h4 500 Minutes For Parkinson's (An Educational Resource to Support the 500 Miles for Parkinson's Project)
-
-	p In the spring of 2016, Harry McMurtry will walk from New York City to his hometown, Toronto, to raise money for Parkinson's research and awareness of this disease. He will be accompanied on the walk by Sue Thompson of Toronto and Dr. Ross Sugar of Baltimore, MD. As Harry, Sue and Ross all have Parkinson's disease, walking up to 15 miles a day for 45 days is a tremendous challenge and one that makes this event a much bigger story about the disease itself.
-
-	h4 School Program
-
-	p One of the goals of 500 Miles for Parkinson's is to raise awareness of Parkinson's disease. To help achieve this goal, we want to engage school-aged children and, thus, their schools in the project. This engagement may be accomplished in a number of  ways:
-
-	ol
-		li Schools may invite Harry, Sue and Ross to address the school about Parkinson's disease generally or 500 Miles specifically.
-		li Schools may buy a mile through student fundraising activities.
-		li Schools and individual classes may explore the 500 Minutes for Parkinsons Challenge (see below)
-
-	h4 Introducing the 500 Minutes For Parkinson's Challenge
-
-	p This is a challenge for educators and schools to provide students with up to 500 Minutes of Education and Awaness about Parkinson's during the Walk. This is equivalent to approximately 10-15 minutes per day. Sue Thompson has used her experience as an educator to develop a variety of lesson plans and resources to make this challenge easy. Teachers can used lesson plans provided and adapt them as necessary to fit the needs of their classes and facilities.  The lesson plans are targeted for grades 4-8 (but can be adapted to fit any age group) and include topics like the brain, Parkinson's disease, mindfulness and yoga, balance and agility exercise, brain games, fundraising ideas and the list goes on. They are instructional, fun and easy – help spread awareness about Parkinson's and get involved!!
+	h1 #{title}
+	ul
+		li: a(href='What-Is-Parkinson\'s-Disease-Handout-And-Question-Sheet.pdf') What is Parkison's Disease Handout And Question Sheet
+		li: a(href='500-Miles-Lesson-Plan-1-Introduction-To-Parkinson\'s.pdf') Introduction to Parkisons
+		li: a(href='500-Miles-Lesson-Plan-1-Sarika-Says-Worksheet.pdf') Sarika Says Worksheet
+		li: a(href='500-Miles-Lesson-Plan-1-What-Is-500-Miles.pdf') What is 500 Miles
+		li: a(href='500-Miles-Lesson-Plan-3-Scarf-Juggling.pdf') Scarf Juggling
+		li: a(href='500-Miles-Lesson-Plan-4-Mindfulness-#1-Body-Awareness-Scan.pdf') Mindfulness #1 Body Awareness Scan
+		li: a(href='500-Miles-Lesson-Plan-5-Mindfulness-#2-Awareness-And-Breathing.pdf') Mindfulness #2 Awareness And Breathing
+		li: a(href='500-Miles-Lesson-Plan-6-Mindfulness-#3-Listening-To-The-Rain.pdf') Mindfulness #3 Listening To The Rain
+		li: a(href='500-Miles-Lesson-Plan-7-Dance-#1.pdf') Dance #1
+		li: a(href='500-Miles-Lesson-Plan-8-Dance-#2.pdf') Dance #2
+		li: a(href='500-Miles-Lesson-Plan-9-Dance-#3.pdf') Dance #3
+		li: a(href='500-Miles-Lesson-Plan-10-Balance-#1.pdf') Balance #1
+		li: a(href='500-Miles-Lesson-Plan-11-Balance-#2.pdf') Balance #2
+		li: a(href='500-Miles-Lesson-Plan-12-Fitnessblast-#1-Spongey-Skills.pdf') Fitness Blast #1: Spongey Skills 
+		li: a(href='500-Miles-Lesson-Plan-13-Fitnessblast-#2-Tic-Tac-Toe-With-A-Twist.pdf') Fitness Blast #2: Tic Tac Toe With A Twist
+		li: a(href='500-Miles-Lesson-Plan-14-Fitnessblast-#3-Do-What-I-Say-Or-Not.pdf') Fitness Blast #3: Do What I Say Or Not
+		li: a(href='500-Miles-Lesson-Plan-15-Fitnessblast-#4-Moving-Tower.pdf') Fitness Blast #4 Moving Tower
 
 block sidebar
 	.widget
