Removed hashtags in filenames

--- a/views/pages/lessons.jade
+++ b/views/pages/lessons.jade
@@ -11,18 +11,18 @@ block content
 		li: a(href='500-Miles-Lesson-Plan-1-Sarika-Says-Worksheet.pdf') Sarika Says Worksheet
 		li: a(href='500-Miles-Lesson-Plan-1-What-Is-500-Miles.pdf') What is 500 Miles
 		li: a(href='500-Miles-Lesson-Plan-3-Scarf-Juggling.pdf') Scarf Juggling
-		li: a(href='500-Miles-Lesson-Plan-4-Mindfulness-#1-Body-Awareness-Scan.pdf') Mindfulness #1 Body Awareness Scan
-		li: a(href='500-Miles-Lesson-Plan-5-Mindfulness-#2-Awareness-And-Breathing.pdf') Mindfulness #2 Awareness And Breathing
-		li: a(href='500-Miles-Lesson-Plan-6-Mindfulness-#3-Listening-To-The-Rain.pdf') Mindfulness #3 Listening To The Rain
-		li: a(href='500-Miles-Lesson-Plan-7-Dance-#1.pdf') Dance #1
-		li: a(href='500-Miles-Lesson-Plan-8-Dance-#2.pdf') Dance #2
-		li: a(href='500-Miles-Lesson-Plan-9-Dance-#3.pdf') Dance #3
-		li: a(href='500-Miles-Lesson-Plan-10-Balance-#1.pdf') Balance #1
-		li: a(href='500-Miles-Lesson-Plan-11-Balance-#2.pdf') Balance #2
-		li: a(href='500-Miles-Lesson-Plan-12-Fitnessblast-#1-Spongey-Skills.pdf') Fitness Blast #1: Spongey Skills 
-		li: a(href='500-Miles-Lesson-Plan-13-Fitnessblast-#2-Tic-Tac-Toe-With-A-Twist.pdf') Fitness Blast #2: Tic Tac Toe With A Twist
-		li: a(href='500-Miles-Lesson-Plan-14-Fitnessblast-#3-Do-What-I-Say-Or-Not.pdf') Fitness Blast #3: Do What I Say Or Not
-		li: a(href='500-Miles-Lesson-Plan-15-Fitnessblast-#4-Moving-Tower.pdf') Fitness Blast #4 Moving Tower
+		li: a(href='500-Miles-Lesson-Plan-4-Mindfulness-1-Body-Awareness-Scan.pdf') Mindfulness #1 Body Awareness Scan
+		li: a(href='500-Miles-Lesson-Plan-5-Mindfulness-2-Awareness-And-Breathing.pdf') Mindfulness #2 Awareness And Breathing
+		li: a(href='500-Miles-Lesson-Plan-6-Mindfulness-3-Listening-To-The-Rain.pdf') Mindfulness #3 Listening To The Rain
+		li: a(href='500-Miles-Lesson-Plan-7-Dance-1.pdf') Dance #1
+		li: a(href='500-Miles-Lesson-Plan-8-Dance-2.pdf') Dance #2
+		li: a(href='500-Miles-Lesson-Plan-9-Dance-3.pdf') Dance #3
+		li: a(href='500-Miles-Lesson-Plan-10-Balance-1.pdf') Balance #1
+		li: a(href='500-Miles-Lesson-Plan-11-Balance-2.pdf') Balance #2
+		li: a(href='500-Miles-Lesson-Plan-12-Fitnessblast-1-Spongey-Skills.pdf') Fitness Blast #1: Spongey Skills 
+		li: a(href='500-Miles-Lesson-Plan-13-Fitnessblast-2-Tic-Tac-Toe-With-A-Twist.pdf') Fitness Blast #2: Tic Tac Toe With A Twist
+		li: a(href='500-Miles-Lesson-Plan-14-Fitnessblast-3-Do-What-I-Say-Or-Not.pdf') Fitness Blast #3: Do What I Say Or Not
+		li: a(href='500-Miles-Lesson-Plan-15-Fitnessblast-4-Moving-Tower.pdf') Fitness Blast #4 Moving Tower
 
 block sidebar
 	.widget
