--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -24,8 +24,11 @@ html
 				li
 					a(href='/resources', class = activePage == 'resources' ? 'active' : '') Other Resources
 				li
+					a(href='/pledgeform', class = activePage == 'pledgeform' ? 'active' : '') Pledge Form
+				li
 					a(class = activePage == 'contact' ? 'active' : '') About Us & Contact
 					ul
+
 						li: a(href='/team/general') Team
 						li: a(href='/team/harry') Harry
 						li: a(href='/team/sue') Sue
