--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   font-family: 'PT Sans', sans-serif;
 }
@@ -159,6 +160,10 @@ header {
   margin-bottom: 20px;
 }
 
+.main-content ul {
+  list-style-type: none;
+}
+
 .sidebar {
   float: left;
   width: 300px;
@@ -180,6 +185,25 @@ header {
   font-size: 13px;
   padding: 0px 10px;
   margin-bottom: 10px;
+}
+
+.sidebar .widget button {
+  background-color: #fa5b4a;
+  border: #000000;
+  color: #fff;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  width: 200px;
+  font-family: ‘Times New Roman’, serif;
+}
+
+.sidebar .widget img {
+  width: 200px;
+  height: 300px;
 }
 
 p {
