--- a/views/pages/contact.jade
+++ b/views/pages/contact.jade
@@ -18,9 +18,8 @@ block sidebar
 	.widget
 		h1 Visit us on Facebook, Twitter, or Instagram
 		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'")	Facebook
-		button(onclick="window.location.href='https://twitter.com/shakyharry'")	Twitter
+		button(onclick="window.location.href='https://twitter.com/shakyharry'", background-color)	Twitter
 		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'")	Instagram
 		p
 		img(src="http://fivehundredmiles.org/wp-content/uploads/2016/02/Logo-for-Web.png", style="width:200px;height:200px;")
 
-		
