--- a/views/pages/home.jade
+++ b/views/pages/home.jade
@@ -28,4 +28,4 @@ block sidebar
 		button(onclick="window.location.href='https://twitter.com/shakyharry'")	Twitter
 		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'")	Instagram
 		p
-		img(src="http://fivehundredmiles.org/wp-content/uploads/2016/02/Logo-for-Web.png", style="width:200px;height:200px;")
+		img(src="http://fivehundredmiles.org/wp-content/uploads/2016/02/Logo-for-Web.png")
