--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -153,7 +153,7 @@ header {
 
 .main-content {
   float: left;
-  width: 500px;
+  width: 60%;
 }
 
 .main-content p {
@@ -166,7 +166,7 @@ header {
 
 .sidebar {
   float: left;
-  width: 300px;
+  width: 40%;
 }
 
 .sidebar .widget {
