--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -152,7 +152,7 @@ header {
 
 .main-content {
 	float: left;
-	width: 500px;
+	width: 60%;
 	
 	p {
 		margin-bottom: 20px;
@@ -166,7 +166,7 @@ header {
 
 .sidebar {
 	float: left;
-	width: 300px;
+	width: 40%;
 	
 	.widget {
 		border-radius: 3px;
