--- a/views/pages/fundraising.jade
+++ b/views/pages/fundraising.jade
@@ -30,9 +30,9 @@ block content
 
 block sidebar
 	.widget
-		h1 Visit us on Facebook, Twitter, or Instagram
+		h1 Visit us on social media!
 		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'")	Facebook
 		button(onclick="window.location.href='https://twitter.com/shakyharry'")	Twitter
 		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'")	Instagram
 		p
-		img(src="http://fivehundredmiles.org/wp-content/uploads/2016/02/Logo-for-Web.png", style="width:200px;height:200px;")
+		img(src="http://fivehundredmiles.org/wp-content/uploads/2016/02/Logo-for-Web.png")
