--- a/views/pages/home.jade
+++ b/views/pages/home.jade
@@ -23,7 +23,7 @@ block content
 
 block sidebar
 	.widget
-		h1 Visit us on Facebook, Twitter, or Instagram
+		h1 Visit us on social media!
 		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'")	Facebook
 		button(onclick="window.location.href='https://twitter.com/shakyharry'")	Twitter
 		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'")	Instagram
