--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -10,7 +10,7 @@ html
 		script(type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js')
 	body
 		header
-			h1 500 Miles For Parkisons
+			h1 Schools for 500 Miles
 		nav
 			ul
 				li
