--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 html {
-  font-family: 'PT Sans', sans-serif;
+  font-family: ‘Helvetica’, sans-serif;
 }
 
 nav {
@@ -132,17 +132,22 @@ nav ul li ul li a:hover {
 }
 
 body {
-  font-family: 'Georgia';
+  font-family: ‘Helvetica’, sans-serif;
   background-color: #faf9f0;
   color: #444;
 }
 
+body a {
+  color: #384762;
+  text-decoration: none;
+}
+
 header {
   padding: 50px 10px;
-  color: #fff;
+  color: #faf9f0;
   font-size: 25px;
   text-align: center;
-  background-color: #fa5b4a;
+  background-color: #ff9980;
 }
 
 .container {
@@ -164,8 +169,12 @@ header {
   list-style-type: none;
 }
 
+.main-content h1 {
+  font-family: Times-New-Roman;
+}
+
 .sidebar {
-  float: left;
+  float: right;
   width: 40%;
 }
 
@@ -179,6 +188,7 @@ header {
 .sidebar .widget h1 {
   margin: 13px 10px 4px 10px;
   padding-bottom: 10px;
+  font-family: Times-New-Roman;
 }
 
 .sidebar .widget p {
@@ -188,9 +198,9 @@ header {
 }
 
 .sidebar .widget button {
-  background-color: #fa5b4a;
+  background-color: #aaa;
   border: #000000;
-  color: #fff;
+  color: #faf9f0;
   padding: 15px 32px;
   text-align: center;
   display: inline-block;
@@ -198,7 +208,6 @@ header {
   margin: 4px 2px;
   cursor: pointer;
   width: 200px;
-  font-family: ‘Times New Roman’, serif;
 }
 
 .sidebar .widget img {
