--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,8 +1,8 @@
-$main-color: #fa5b4a;
+$main-color: #ff9980;
 $background-color: #faf9f0;
 
 html {
-	font-family: 'PT Sans', sans-serif;
+	font-family: ‘Helvetica’, sans-serif;
 }
 
 nav {
@@ -131,14 +131,20 @@ nav {
 }
 
 body {
-	font-family: 'Georgia';
+	font-family: ‘Helvetica’, sans-serif;
 	background-color: $background-color;
 	color: #444;
+
+	a
+	{
+		color: #384762;
+		text-decoration: none;
+	}
 }
 
 header {
 	padding: 50px 10px;
-	color: #fff;
+	color: #faf9f0;
 	font-size: 25px;
 	text-align: center;
 	background-color: $main-color;
@@ -162,10 +168,15 @@ header {
 	{
 		list-style-type: none;
 	}
+
+	h1
+	{
+		font-family: Times-New-Roman;
+	}
 }
 
 .sidebar {
-	float: left;
+	float: right;
 	width: 40%;
 	
 	.widget {
@@ -177,6 +188,7 @@ header {
 		h1 {
 			margin: 13px 10px 4px 10px;
 			padding-bottom: 10px;
+			font-family: Times-New-Roman;
 		}
 		
 		p {
@@ -186,9 +198,9 @@ header {
 		}
 
 		button {
-			background-color: $main-color;
+			background-color: #aaa;
     			border: #000000;
-    			color: #fff;
+    			color: $background-color;
     			padding: 15px 32px;
     			text-align: center;
     			display: inline-block;
@@ -196,7 +208,6 @@ header {
    			margin: 4px 2px;
    			cursor: pointer;
 			width: 200px;
-			font-family: ‘Times New Roman’, serif;
 			
 		}
 
