--- a/views/pages/contact.jade
+++ b/views/pages/contact.jade
@@ -16,7 +16,7 @@ block content
 
 block sidebar
 	.widget
-		h1 Visit us on Facebook, Twitter, or Instagram
+		h1 Visit us on social media!
 		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'") Facebook
 		button(onclick="window.location.href='https://twitter.com/shakyharry'", background-color) Twitter
 		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'") Instagram
