--- a/views/pages/lessons.jade
+++ b/views/pages/lessons.jade
@@ -22,13 +22,13 @@ block content
 		li: a(href='500-Miles-Lesson-Plan-12-Fitnessblast-1-Spongey-Skills.pdf') Fitness Blast #1: Spongey Skills 
 		li: a(href='500-Miles-Lesson-Plan-13-Fitnessblast-2-Tic-Tac-Toe-With-A-Twist.pdf') Fitness Blast #2: Tic Tac Toe With A Twist
 		li: a(href='500-Miles-Lesson-Plan-14-Fitnessblast-3-Do-What-I-Say-Or-Not.pdf') Fitness Blast #3: Do What I Say Or Not
-		li: a(href='500-Miles-Lesson-Plan-15-Fitnessblast-4-Moving-Tower.pdf') Fitness Blast #4 Moving Tower
+		li: a(href='500-Miles-Lesson-Plan-15-Fitnessblast-4-Moving-Tower.pdf') Fitness Blast #4: Moving Tower
 
 block sidebar
 	.widget
 		h1 Visit us on social media!
-		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'")	Facebook
+		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'") Facebook
 		button(onclick="window.location.href='https://twitter.com/shakyharry'")	Twitter
-		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'")	Instagram
+		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'") Instagram
 		p
 		img(src="http://fivehundredmiles.org/wp-content/uploads/2016/02/Logo-for-Web.png")
