--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,11 +1,10 @@
-@charset "UTF-8";
 html {
-  font-family: ‘Helvetica’, sans-serif;
+  font-family: 'Helvetica', sans-serif;
+  width: 100%;
 }
 
 nav {
   text-align: center;
-  background-color: #191E28;
 }
 
 nav ul {
@@ -78,7 +77,7 @@ nav ul li {
 nav ul li a {
   display: inline-block;
   text-decoration: none;
-  padding: 16px 20px 20px 20px;
+  padding: 16px 12px;
   color: #aaa;
   font-size: 18px;
   border-top: 4px #191E28 solid;
@@ -89,12 +88,14 @@ nav ul li a.active {
   border-top: 4px #fff solid;
   padding-top: 16px;
   color: #fff;
+  text-decoration: none;
 }
 
 nav ul li:hover a {
   border-top: 4px #ccc solid;
   padding-top: 16px;
   color: #ccc;
+  text-decoration: none;
 }
 
 nav ul li:hover ul {
@@ -108,7 +109,7 @@ nav ul li ul {
   opacity: 0;
   z-index: 0;
   visibility: hidden;
-  width: 100px;
+  width: 150px;
   transition: 0.25s all, z-index 1ms;
 }
 
@@ -118,6 +119,7 @@ nav ul li ul li {
 }
 
 nav ul li ul li a {
+  display: inline-block;
   width: 100%;
   background-color: #464a52;
   border-top: none !important;
@@ -129,17 +131,14 @@ nav ul li ul li a {
 nav ul li ul li a:hover {
   border-top: none;
   color: white;
+  text-decoration: none;
 }
 
 body {
-  font-family: ‘Helvetica’, sans-serif;
-  background-color: #faf9f0;
+  width: 100%;
+  font-family: 'Helvetica', sans-serif;
+  background-color: #faf9f0 !important;
   color: #444;
-}
-
-body a {
-  color: #384762;
-  text-decoration: none;
 }
 
 header {
@@ -147,48 +146,56 @@ header {
   color: #faf9f0;
   font-size: 25px;
   text-align: center;
-  background-color: #ff9980;
-}
-
-.container {
-  width: 800px;
-  margin: 50px auto;
-  overflow: hidden;
+  background-color: #ff5c34;
 }
 
 .main-content {
-  float: left;
-  width: 60%;
+  font-size: 16px;
 }
 
 .main-content p {
   margin-bottom: 20px;
-}
-
-.main-content ul {
-  list-style-type: none;
+  line-height: 28px;
 }
 
 .main-content h1 {
-  font-family: Times-New-Roman;
+  font-family: 'Times-New-Roman';
+  color: #ff343f;
+}
+
+.main-content ul {
+  padding-left: 20px;
+}
+
+.main-content ol li {
+  line-height: 28px;
+}
+
+.main-content a {
+  color: #384762;
+  transition: all 0.5s;
+}
+
+.main-content a:hover {
+  opacity: 0.7;
+  text-decoration: none;
 }
 
 .sidebar {
-  float: right;
-  width: 40%;
+  text-align: center;
 }
 
 .sidebar .widget {
   border-radius: 3px;
   border: 1pxx solid #ccc;
   margin-left: 20px;
-  background-color: #faf9f0;
 }
 
 .sidebar .widget h1 {
   margin: 13px 10px 4px 10px;
   padding-bottom: 10px;
-  font-family: Times-New-Roman;
+  font-family: 'Times-New-Roman';
+  color: #ff343f;
 }
 
 .sidebar .widget p {
@@ -203,14 +210,22 @@ header {
   color: #faf9f0;
   padding: 15px 32px;
   text-align: center;
-  display: inline-block;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 10px;
   font-size: 16px;
-  margin: 4px 2px;
   cursor: pointer;
   width: 200px;
+  border-radius: 5px;
+  transition: all 0.5s;
+}
+
+.sidebar .widget button:hover {
+  background-color: #ff343f;
 }
 
 .sidebar .widget img {
+  border-radius: 5px;
   width: 200px;
   height: 300px;
 }
@@ -225,4 +240,42 @@ footer {
   border-top: 1px dotted #ccc;
   padding-top: 5px;
   font-size: 13px;
+}
+
+/*
+@media (max-width: 860px) {
+	html nav {
+		ul {
+			li {
+				a, a.active {
+					width: 100%;
+					border: none;
+					border-bottom: 1px solid white;
+					transition: none;
+					&:hover {
+						border: none;
+						border-bottom: 1px solid white;
+						padding-top: 16px;
+					}
+				}
+				width: 100%;
+				ul {
+					width: 100%;
+					
+					li {
+						width: 100%;
+					}
+				}
+			}
+		}
+	}
+	
+    html .small-nav {
+        display: block;
+    }
+}
+*/
+video {
+  height: auto;
+  max-width: 100%;
 }
