--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,13 +1,15 @@
-$main-color: #ff9980;
+
+$main-color: #ff5c34;
+$header-color: #ff343f;
 $background-color: #faf9f0;
 
 html {
-	font-family: ‘Helvetica’, sans-serif;
+	font-family: 'Helvetica', sans-serif;
+	width: 100%;
 }
 
 nav {
 	text-align: center;
-	background-color: #191E28;
 	ul {
 		list-style-type: none;
 		margin: 0 auto;
@@ -75,7 +77,7 @@ nav {
 			a {
 				display: inline-block;
 				text-decoration: none;
-				padding: 16px 20px 20px 20px;
+				padding: 16px 12px;
 				color: #aaa;
 				font-size: 18px;
 				border-top: 4px #191E28 solid;
@@ -85,6 +87,7 @@ nav {
 					border-top: 4px #fff solid;
 					padding-top: 16px;
 					color: #fff;
+					text-decoration: none;
 				}
 				
 				
@@ -93,6 +96,7 @@ nav {
 				border-top: 4px #ccc solid;
 				padding-top: 16px;
 				color: #ccc;
+				text-decoration: none;
 			}
 			
 			&:hover ul {
@@ -106,13 +110,14 @@ nav {
 				opacity: 0;
 				z-index: 0;
 				visibility: hidden;
-				width: 100px;	
+				width: 150px;	
 				transition: 0.25s all, z-index 1ms;
 				
 				li {
 					display: block;
 					width: 100%;
 					a {
+						display: inline-block;
 						width: 100%;
 						background-color: #464a52;
 						border-top: none !important;
@@ -122,6 +127,7 @@ nav {
 						&:hover {
 							border-top: none;
 							color: white;
+							text-decoration: none;
 						}
 					}
 				}
@@ -131,15 +137,10 @@ nav {
 }
 
 body {
-	font-family: ‘Helvetica’, sans-serif;
-	background-color: $background-color;
+	width: 100%;
+	font-family: 'Helvetica', sans-serif;
+	background-color: $background-color !important;
 	color: #444;
-
-	a
-	{
-		color: #384762;
-		text-decoration: none;
-	}
 }
 
 header {
@@ -150,45 +151,49 @@ header {
 	background-color: $main-color;
 }
 
-.container {
-	width: 800px;
-	margin: 50px auto;
-	overflow: hidden;
-}
-
 .main-content {
-	float: left;
-	width: 60%;
-	
+	font-size: 16px;
 	p {
 		margin-bottom: 20px;
+		line-height: 28px;
 	}
 
-	ul
-	{
-		list-style-type: none;
+	h1 {
+		font-family: 'Times-New-Roman';
+		color: $header-color;
 	}
-
-	h1
-	{
-		font-family: Times-New-Roman;
+	
+	ul {
+		padding-left: 20px;
+	}
+	
+	ol li {
+		line-height: 28px;
+	}
+	
+	a {
+		color: #384762;
+		transition: all 0.5s;
+		&:hover {
+			opacity: 0.7;
+			text-decoration: none;
+		}
 	}
 }
 
 .sidebar {
-	float: right;
-	width: 40%;
+	text-align: center;
 	
 	.widget {
 		border-radius: 3px;
 		border: 1pxx solid #ccc;
 		margin-left: 20px;
-		background-color: $background-color;
 		
 		h1 {
 			margin: 13px 10px 4px 10px;
 			padding-bottom: 10px;
-			font-family: Times-New-Roman;
+			font-family: 'Times-New-Roman';
+			color: $header-color;
 		}
 		
 		p {
@@ -199,19 +204,26 @@ header {
 
 		button {
 			background-color: #aaa;
-    			border: #000000;
-    			color: $background-color;
-    			padding: 15px 32px;
-    			text-align: center;
-    			display: inline-block;
-    			font-size: 16px;
-   			margin: 4px 2px;
+    		border: #000000;
+    		color: $background-color;
+    		padding: 15px 32px;
+    		text-align: center;
+    		display: block;
+			margin: 0 auto;
+			margin-bottom: 10px;
+    		font-size: 16px;
    			cursor: pointer;
 			width: 200px;
+			border-radius: 5px;
+			transition: all 0.5s;
 			
+			&:hover {
+				background-color: $header-color;
+			}
 		}
 
 		img {
+			border-radius: 5px;
 			width: 200px;
 			height: 300px;
 		}
@@ -229,4 +241,41 @@ footer {
 	border-top: 1px dotted #ccc;
 	padding-top: 5px;
 	font-size: 13px;
+}
+/*
+@media (max-width: 860px) {
+	html nav {
+		ul {
+			li {
+				a, a.active {
+					width: 100%;
+					border: none;
+					border-bottom: 1px solid white;
+					transition: none;
+					&:hover {
+						border: none;
+						border-bottom: 1px solid white;
+						padding-top: 16px;
+					}
+				}
+				width: 100%;
+				ul {
+					width: 100%;
+					
+					li {
+						width: 100%;
+					}
+				}
+			}
+		}
+	}
+	
+    html .small-nav {
+        display: block;
+    }
+}
+*/
+video {
+	height: auto;
+	max-width: 100%;
 }
