--- a/views/pages/404.jade
+++ b/views/pages/404.jade
@@ -3,3 +3,9 @@ block content
 	h1 Page Not Found
 block sidebar
 	.widget
+		h1 Visit us on social media!
+		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'") Facebook
+		button(onclick="window.location.href='https://twitter.com/shakyharry'", background-color) Twitter
+		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'") Instagram
+		p
+		img(src="http://fivehundredmiles.org/wp-content/uploads/2016/02/Logo-for-Web.png")
