--- a/views/pages/home.jade
+++ b/views/pages/home.jade
@@ -4,11 +4,11 @@ block vars
 	- var activePage = 'home';
 
 block content
-	h1 500 Minutes For Parkinson's (An Educational Resource to Support the 500 Miles for Parkinson's Project)
+	h1 500 Minutes For Parkinson's
 
 	p In the spring of 2016, Harry McMurtry will walk from New York City to his hometown, Toronto, to raise money for Parkinson's research and awareness of this disease. He will be accompanied on the walk by Sue Thompson of Toronto and Dr. Ross Sugar of Baltimore, MD. As Harry, Sue and Ross all have Parkinson's disease, walking up to 15 miles a day for 45 days is a tremendous challenge and one that makes this event a much bigger story about the disease itself.
 
-	h4 School Program
+	h1 School Program
 
 	p One of the goals of 500 Miles for Parkinson's is to raise awareness of Parkinson's disease. To help achieve this goal, we want to engage school-aged children and, thus, their schools in the project. This engagement may be accomplished in a number of  ways:
 
@@ -17,15 +17,15 @@ block content
 		li Schools may buy a mile through student fundraising activities.
 		li Schools and individual classes may explore the 500 Minutes for Parkinsons Challenge (see below)
 
-	h4 Introducing the 500 Minutes For Parkinson's Challenge
+	h1 500 Minutes For Parkinson's Challenge
 
 	p This is a challenge for educators and schools to provide students with up to 500 Minutes of Education and Awaness about Parkinson's during the Walk. This is equivalent to approximately 10-15 minutes per day. Sue Thompson has used her experience as an educator to develop a variety of lesson plans and resources to make this challenge easy. Teachers can used lesson plans provided and adapt them as necessary to fit the needs of their classes and facilities.  The lesson plans are targeted for grades 4-8 (but can be adapted to fit any age group) and include topics like the brain, Parkinson's disease, mindfulness and yoga, balance and agility exercise, brain games, fundraising ideas and the list goes on. They are instructional, fun and easy – help spread awareness about Parkinson's and get involved!!
 
 block sidebar
 	.widget
 		h1 Visit us on social media!
-		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'")	Facebook
+		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'") Facebook
 		button(onclick="window.location.href='https://twitter.com/shakyharry'")	Twitter
-		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'")	Instagram
+		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'") Instagram
 		p
 		img(src="http://fivehundredmiles.org/wp-content/uploads/2016/02/Logo-for-Web.png")
