--- a/views/pages/result.jade
+++ b/views/pages/result.jade
@@ -5,10 +5,9 @@ block content
 
 block sidebar
 	.widget
-		h1 Widget
+		h1 Visit us on social media!
+		button(onclick="window.location.href='https://www.facebook.com/500-Miles-for-Parkinsons-1692172241046212/'") Facebook
+		button(onclick="window.location.href='https://twitter.com/shakyharry'")	Twitter
+		button(onclick="window.location.href='https://www.instagram.com/500milesforparkinsons/'") Instagram
 		p
-			| Sed auctor neque eu tellus rhoncus ut
-			| eleifend nibh porttitor. Ut in nulla enim.
-		p
-			| Vivamus hendrerit arcu sed erat molestie
-			| vehicula.
+		img(src="http://fivehundredmiles.org/wp-content/uploads/2016/02/Logo-for-Web.png")
